--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>  
             <div class="row">
                 <div class="tips">
-                    <h5 class="tips1">中大团委青年传媒中心</h5>
+                    <h5 class="tips1">中山大学团委青年传媒中心</h5>
                 </div> 
             </div>
         </div>
