--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>  
             <div class="row">
                 <div class="tips">
-                    <h5 class="tips1">中山大学团委青年传媒中心</h5>
+                    <h5 class="tips1">中大团委青年传媒中心</h5>
                 </div> 
             </div>
         </div>
@@ -184,8 +184,12 @@
             <div class="sysu" id="sysu2">Y</div>
             <div class="sysu" id="sysu3">S</div>
             <div class="sysu" id="sysu4">U</div>
-            <div class="graduate hidden graduate_class1" id="graduate1">W</div>
-            <div class="graduate hidden graduate_class1" id="graduate2">e</div>
+            <div class="graduate hidden graduate_class1" id="graduate_new_1">w</div>
+            <div class="graduate hidden graduate_class1" id="graduate_new_2">e</div>
+            <div class="graduate hidden graduate_class1" id="graduate_new_3"></div>
+            <div class="graduate hidden graduate_class1" id="graduate_new_4">a</div>
+            <div class="graduate hidden graduate_class1" id="graduate_new_5">r</div>
+            <div class="graduate hidden graduate_class1" id="graduate_new_6">e</div>
             <div class="graduate hidden graduate_class2" id="graduate3">g</div>
             <div class="graduate hidden graduate_class2" id="graduate4">r</div>
             <div class="graduate hidden graduate_class2" id="graduate5">a</div>
@@ -194,7 +198,7 @@
             <div class="graduate hidden graduate_class2" id="graduate8">a</div>
             <div class="graduate hidden graduate_class2" id="graduate9">t</div>
             <div class="graduate hidden graduate_class2" id="graduate10">e</div>
-            <div class="graduate hidden graduate_class2" id="graduate11">!</div>
+            <div class="graduate hidden graduate_class2" id="graduate11">d</div>
         </div>
 
         <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
@@ -206,4 +210,5 @@
     </body>
 </html>
 
+                
                 
