--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
         <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="./cropper/croppe.js"></script>
         <script src="./js/main.js"></script>
+        <script src="./exif/exif.js"></script>
     </body>
 </html>
 
