--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
         <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="./cropper/croppe.js"></script>
         <script src="./js/main.js"></script>
-        <script src="./exif/exif.js"></script>
+        <script src="https://cdn.bootcss.com/exif-js/2.3.0/exif.js"></script>
+        <script src="https://cdn.bootcss.com/exif-js/2.3.0/exif.min.js"></script>
     </body>
 </html>
